--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
 --title-color:#212121;
 --text-color: #757575;
 --background-color: #2F303A;
+--transition:250ms cubic-bezier(0.4, 0, 0.2, 1); ;
 
 }
 body {
@@ -10,6 +11,38 @@ body {
     color: var(--text-color);
     background-color: #FFFFFF;
     
+}
+.is-hidden {
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+    
+}
+.backdrop {
+    background: rgba(0, 0, 0, 0.2);
+    position: fixed;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    transition: visibility var(--transition), opacity var(--transition);
+}
+.modal-backdrop {
+    position: absolute;
+    width: 528px;
+    height: 581px;
+    background-color: #FFFFFF;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.modal-backdrop-button {
+    position: absolute;
+    right: 8px;
+    top:8px;
+    background-color: transparent;
+    border: 0;
 }
 .conteiner {
     width: 1200px;
@@ -72,6 +105,7 @@ p {
     line-height: 1.2;
     text-decoration: none;
     color: var(--title-color);
+    transition: color var(--transition);
 }
 .logo-part {
     color: var(--accent-color);
@@ -87,18 +121,19 @@ p {
 .main-list-item {
     
     font-style: normal;
+    position: relative;
+    padding-top: 32px;
+    padding-bottom: 32px;
     font-weight: 500;
     font-size: 14px;
     line-height: 1.4;
     letter-spacing: 0.02em;
     text-decoration: none;
     color: var(--title-color);
+    transition: color var(--transition);
 }
 
-.main-list-li {
-    padding-top: 32px;
-    padding-bottom: 32px;
-}
+
 .main-list-li:not(:last-child) {
     margin-right: 50px;
 }
@@ -107,6 +142,17 @@ p {
 }
 .main-list-item.current {
     color: var(--accent-color);
+}
+.main-list-item.current::after {
+    content: '';
+    position: absolute;
+    width:100%;
+    height: 4px;
+    display: block;
+    background-color: var(--accent-color);
+    bottom: 0;
+    left: 0;
+    border-radius: 2px;
 }
 
 .contact-list {
@@ -128,6 +174,7 @@ p {
     letter-spacing: 0.02em;
     color: var(--text-color);
     text-decoration: none;
+    transition: color var(--transition);
 }
 .contact-list-li:not(:last-child) {
     margin-right: 50px;
@@ -184,8 +231,12 @@ color: #FFFFFF;
     color: #FFFFFF;
     cursor:pointer ;
     background-color: var(--accent-color);
+    transition: background-color var(--transition);
 }
 
+.hero-button:hover,.hero-button:focus {
+    background-color: #188CE8;
+}
 
 /* Наши преимущества */
 .benefits-list {
@@ -230,6 +281,34 @@ color: #FFFFFF;
 .work-examples {
     display: flex;
     justify-content: center;
+}
+.work-examples-img {
+    position: relative;
+}
+.work-examples-img::after {
+content:'';
+position: absolute;
+width: 370px;
+height: 70px;
+background: rgba(47, 48, 58, 0.8);
+display: block;
+bottom: 0px;
+left: 0px;
+pointer-events: none;
+}
+.work-examples-text {
+    position: absolute;
+    left: 90px;
+    bottom: 27px;
+    z-index: 10;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
 }
 .work-examples-item:not(:last-child) {
     margin-right: 30px;
@@ -312,6 +391,7 @@ color: #FFFFFF;
     height: 44px;
     border-radius: 50%;
     fill: #AFB1B8;
+    transition: background-color var(--transition), fill var(--transition);
 }
 .team-contact-item:hover a,.team-contact-item a:focus{
     background-color: var(--accent-color);
@@ -346,6 +426,7 @@ color: #FFFFFF;
     align-items: center;
     border:1px solid #AFB1B8;
     border-radius: 4px;
+    transition: color var(--transition), border var(--transition);
 }
 .clients-list-item:hover a, .clients-list-item a:focus  {
     color: var(--accent-color);
@@ -372,6 +453,7 @@ footer {
     letter-spacing: 0.03em;
     text-decoration: none;
     color: #FFFFFF;
+    transition: color var(--transition);
 }
 .address-phone,.address-mail {
     font-style: normal;
@@ -381,7 +463,9 @@ footer {
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
     text-decoration: none;
-}.address-mail:hover,.address-phone:hover,.address-local:hover,.address-mail:focus,
+    transition: color var(--transition);
+}
+.address-mail:hover,.address-phone:hover,.address-local:hover,.address-mail:focus,
 .address-phone:focus,
 .address-local:focus {
     color: var(--accent-color);
@@ -450,6 +534,7 @@ margin-bottom: 9px;
     border-radius: 4px;
     cursor: pointer;
     border: #F5F4FA;
+    transition: color var(--transition),background var(--transition),box-shadow var(--transition);
 }
 
 .filter-button:hover, .filter-button:focus {
@@ -479,10 +564,20 @@ margin-right: 8px;
     border-bottom: 1px solid #EEEEEE;
     padding: 20px 24px;
 }
+.examples-link {
+    display: block;
+    text-decoration: none;
+    transition: box-shadow var(--transition);
+}
+.examples-li {
+    
+    transition: box-shadow var(--transition);
+}
 .examples-link:focus, .examples-li:hover {
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
     0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+
 }
 
 .examples-li:not(:nth-child(3n)) {
@@ -491,9 +586,37 @@ margin-right: 8px;
 .examples-li:not(:nth-last-child(-n+3)) {
 margin-bottom: 31px; ;
 }
-.examples-link {
-    display: block; 
-    text-decoration:none ;
+.examples-link-img {
+    position: relative;
+    overflow: hidden;
+}
+.examples-modal-text {
+    position:absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 370px;
+    height: 294px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: rgba(33, 150, 243, 0.9);
+    transform: translateY(140%);
+    transition: transform var(--transition);
+
+}
+.examples-li:hover .examples-modal-text {
+    transform: translateY(0);
+}
+
+.examples-modal-text p {
+    width: 322px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.56;
+    letter-spacing: 0.03em;
+    color: #FFFFFF;
 }
 .examples-title {
     margin-bottom: 4px;
